# rust-game

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/map/test/: collision.glb  collision.gltf  model.glb
assets/models/: player.glb
assets/models/creatures/project_files/: enemy.blend
assets/models/general/project_files/: player.blend
assets/models/weapons/project_files/: shield.blend  sword.blend  wand.blend
assets/scenes/: temp_scene_rust_game.blend  temp_scene_rust_game.blend1
src/: creature.rs  input.rs  level.rs  level_builder.rs  main.rs  map.rs  player.rs  user_interface.rs
src/enemies/: mod.rs  rock.rs  worm.rs
