[package]
name = "rust_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", features = ["dynamic"]} # make sure this is the latest version
bevy_rapier3d = { version = "0.15.0", features = [ "debug-render" ] }
